Reader Stream Refresh: Fix cards wrapping if Happy Chat is open (#8865)
* Reader Stream Refresh: Fix cards wrapping if Happy Chat is open

* Remove unnnecessary lines of code

--- a/client/blocks/reader-post-actions/style.scss
+++ b/client/blocks/reader-post-actions/style.scss
@@ -19,6 +19,14 @@
 			color: lighten( $gray, 10% );
 		}
 
+		.external-link {
+			align-items: center;
+			box-sizing: border-box;
+			display: inline-flex;
+			padding: 4px 4px 4px 0;
+			position: relative;
+		}
+
 		.external-link:hover,
 		.external-link:focus,
 		.external-link:active {
